<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.genec</groupId>
    <artifactId>genec-jdt-wrapper</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>GenEC Eclipse JDT Wrapper</name>
    <description>Eclipse JDT-based refactoring engine for GenEC</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <eclipse.jdt.version>3.37.0</eclipse.jdt.version>
        <gson.version>2.10.1</gson.version>
    </properties>

    <repositories>
        <!-- Eclipse Maven Repository for JDT dependencies -->
        <repository>
            <id>eclipse-release</id>
            <url>https://repo.eclipse.org/content/repositories/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Eclipse JDT Core for AST parsing -->
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>${eclipse.jdt.version}</version>
            <exclusions>
                <!-- Exclude problematic dependencies -->
                <exclusion>
                    <groupId>xml-apis</groupId>
                    <artifactId>xml-apis-ext</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Eclipse Core Runtime (minimal) -->
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.core.runtime</artifactId>
            <version>3.29.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Eclipse Text for Document manipulation -->
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.text</artifactId>
            <version>3.13.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Eclipse JFace Text for text manipulation -->
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.jface.text</artifactId>
            <version>3.24.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- JSON support for Python communication -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <!-- JUnit for testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Maven Assembly Plugin - Create fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.genec.jdt.GenECRefactoringWrapper</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
